--- a/plugins/alt.1.0.0/alt.html
+++ b/plugins/alt.1.0.0/alt.html
@@ -2,3 +2,6 @@
 <link rel="import" href="alt-rt.html">
 <link rel="import" href="alt-e.html">
 <link rel="import" href="alt-timeline.html">
+<link rel="import" href="alt-select2.html">
+<link rel="import" href="alt-date.html">
+<link rel="import" href="alt-checkbox.html">
