--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -21,16 +21,24 @@
 
     {% for js in jquery %}
     <script src="{{js|raw}}"></script> {% endfor %} {% for js in angular %}
-    <script src="{{js|raw}}"></script> {% endfor %} {% for js in vue %}
     <script src="{{js|raw}}"></script> {% endfor %} {% if firebase %}
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script> {% endif %}
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js" defer></script> {% endif %}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.2.0/webcomponents-loader.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.2.0/webcomponents-loader.js"></script>  
+
+    {% for js in vue %}
+    <script src="{{js|raw}}"></script> 
+    {% endfor %}
+
+    {% for src in script %}
+    <script src="{{src|raw}}" defer></script> {% endfor %}
 
     <link id="pb-file" rel="import" href="{{system_base}}/plugins/pb.1.0.0/pb.html?v={{system.version}}&t={{t}}">
     <link id="alt-file" rel="import" href="{{system_base}}/plugins/alt.1.0.0/alt.html?v={{system.version}}&t={{t}}">
     <link id="rt-file" rel="import" href="{{system_base}}/plugins/rt.2.0.0/rt.html?v={{system.version}}&t={{t}}">
     <link id="bs-file" rel="import" href="{{system_base}}/plugins/bs.1.0.0/bs.html?v={{system.version}}&t={{t}}">
+
+
 </head>
 
 <body class="hold-transition {{skin}}
@@ -601,8 +609,7 @@
     </div>
     <!-- ./wrapper -->
 
-    {% for src in script %}
-    <script src="{{src|raw}}"></script> {% endfor %}
+
 
 </body>
 
