--- a/plugins/alt.1.0.0/alt-date.html
+++ b/plugins/alt.1.0.0/alt-date.html
@@ -15,8 +15,7 @@
 
     Vue.component("datepicker", {
         template: `
-<input class="datetimepicker form-control">
-</input>`,
+<input class="form-control" />`,
         props: {
             format: {
                 type: String,
