--- a/plugins/alt.1.0.0/alt.html
+++ b/plugins/alt.1.0.0/alt.html
@@ -5,3 +5,4 @@
 <link rel="import" href="alt-select2.html">
 <link rel="import" href="alt-date.html">
 <link rel="import" href="alt-checkbox.html">
+<link rel="import" href="alt-table.html">
