--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -607,7 +607,7 @@
 
 
     {% for src in script %}
-    <script src="{{src|raw}}" defer></script> {% endfor %}
+    <script src="{{src|raw}}"></script> {% endfor %}
 
 </body>
 
