--- a/plugins/alt.1.0.0/alt.html
+++ b/plugins/alt.1.0.0/alt.html
@@ -6,3 +6,6 @@
 <link rel="import" href="alt-date.html">
 <link rel="import" href="alt-checkbox.html">
 <link rel="import" href="alt-table.html">
+<link rel="import" href="alt-input.html">
+<link rel="import" href="alt-email.html">
+<link rel="import" href="alt-multiselect.html">
