--- a/plugins/bs.1.0.0/bs-form-group.html
+++ b/plugins/bs.1.0.0/bs-form-group.html
@@ -10,6 +10,13 @@
 `,
         props: {
             label: String
-        },mounted(){}
+        }, mounted() {
+           
+
+        },
+        methods: {
+
+
+        }
     });
 </script>
