--- a/plugins/alt.1.0.0/alt-date.html
+++ b/plugins/alt.1.0.0/alt-date.html
@@ -1,21 +1,98 @@
 <script>
-    Vue.component("alt-datepicker", {
+    Vue.component("alt-datetime", {
         template: `
+    <div>
+    <div class="input-group">
+        <span class="input-group-addon">
+            <i :class="icon"></i>
+        </span>
+        <input class="form-control" ref="input" v-bind="$props" :value="value" :name="name"/>
+        <i v-if="required" class="fa fa-asterisk form-control-feedback" style="top:10px"></i>
+    </div>
+    </div>
+        `,
+        props: {
+            name: String,
+            required: Boolean,
+            type: Boolean,
+            value: String,
+            sideBySide: {
+                type: Boolean,
+                default: true
+            },
+            format: {
+                type: String,
+                default: "YYYY-MM-DD HH:mm"
+            },
+            icon: {
+                type: String,
+                default: "far fa-calendar-alt"
+            }
+        }, mounted() {
+            if (this.required) {
+                $(this.$el).closest(".form-group").addClass("has-feedback");
+                if ($(this.$el).closest(".form-group").length == 0) {
+                    $(this.$el).css("margin-bottom", "0px");
+                    $(this.$el).addClass("form-group has-feedback");
+                }
+            }
+            $(this.$refs.input).datetimepicker({
+                format: this.format
+            });
+        }
+    });
+
+    Vue.component("alt-date", {
+        template: `
+<div>
 <div class="input-group">
     <span class="input-group-addon">
-        <i class="far fa-calendar-alt"></i>
+        <i :class="icon"></i>
     </span>
-    <input is="datepicker" />
+    <input is="datepicker" v-bind="$props" :value="value" :name="name"/>
+    <i v-if="required" class="fa fa-asterisk form-control-feedback" style="top:10px"></i>
+</div>
 </div>
 `,
         props: {
-            type:Boolean
+            icon: {
+                type: String,
+                default: "far fa-calendar-alt"
+            },
+            name: String,
+            required: Boolean,
+            type: Boolean,
+            value: String,
+            format: {
+                type: String,
+                default: "yyyy-mm-dd"
+            },
+            todayHighlight: {
+                type: Boolean,
+                default: true
+            },
+            todayBtn: {
+                type: String,
+                default: "linked"
+            },
+            autoclose: {
+                type: Boolean,
+                default: true
+            }
+        }, mounted() {
+            if (this.required) {
+                $(this.$el).closest(".form-group").addClass("has-feedback");
+                if ($(this.$el).closest(".form-group").length == 0) {
+                    $(this.$el).css("margin-bottom", "0px");
+                    $(this.$el).addClass("form-group has-feedback");
+                }
+            }
         }
     });
 
     Vue.component("datepicker", {
         template: `
-<input class="form-control" />`,
+<input class="form-control"/>`,
         props: {
             format: {
                 type: String,
