--- a/plugins/alt.1.0.0/alt-select2.html
+++ b/plugins/alt.1.0.0/alt-select2.html
@@ -1,8 +1,17 @@
 <script>
+    Vue.component("alt-select2", {
+        template: `<select class="form-control"><slot></slot></select>`,
+        created() {
+        },
+        mounted() {
+            $(this.$el).select2();
+        }
+    });
+
     Vue.component("select2", {
         template: `<select class="form-control"><slot></slot></select>`,
-        created(){
-            
+        created() {
+            console.log("select2 created");
         },
         mounted() {
             $(this.$el).select2();
