--- a/plugins/bs.1.0.0/bs-input-select.html
+++ b/plugins/bs.1.0.0/bs-input-select.html
@@ -10,7 +10,7 @@
                 </li>
             </ul>
         </div>
-        <input type="text" class="form-control" v-bind="$props" :value="v">
+        <input type="text" class="form-control" v-bind="$props" :value="v" :required="required">
     </div>
 </template>
 
@@ -18,6 +18,7 @@
     Vue.component("bs-input-select", {
         template: document.currentScript.ownerDocument.getElementById("bs-input-select"),
         props: {
+            required: Boolean,
             name: String,
             value: String,
             options: Array
@@ -27,10 +28,8 @@
             }
         }, mounted() {
             console.log("mounted");
-            console.log(document.currentScript.ownerDocument.getElementById("bs-input-select"));
         }, methods: {
             itemSelected(value) {
-                console.log(value);
                 this.v = value;
             }
         }
