--- a/plugins/alt.1.0.0/alt.html
+++ b/plugins/alt.1.0.0/alt.html
@@ -1,3 +1,4 @@
+<link rel="import" href="alt-form.html">
 <link rel="import" href="alt-box.html">
 <link rel="import" href="alt-rt.html">
 <link rel="import" href="alt-e.html">
