translation ae fixed

--- a/plugins/alt.1.0.0/alt.html
+++ b/plugins/alt.1.0.0/alt.html
@@ -10,3 +10,5 @@
 <link rel="import" href="alt-input.html">
 <link rel="import" href="alt-email.html">
 <link rel="import" href="alt-multiselect.html">
+<link rel="import" href="alt-ace.html">
+<link rel="import" href="alt-xeditable.html">
