--- a/plugins/alt.1.0.0/alt.html
+++ b/plugins/alt.1.0.0/alt.html
@@ -12,3 +12,4 @@
 <link rel="import" href="alt-multiselect.html">
 <link rel="import" href="alt-ace.html">
 <link rel="import" href="alt-xeditable.html">
+<link rel="import" href="alt-datatables.html">
