--- a/plugins/alt.1.0.0/alt-table.html
+++ b/plugins/alt.1.0.0/alt-table.html
@@ -1,9 +1,9 @@
 <script>
-    Vue.component('alt-table', {
+    Vue.component('alt-table1', {
         template: "<table><slot></slot></table>",
         props: {
             formCreate: Boolean,
-            formName:String
+            formName: String
         },
         data() {
             return {
@@ -15,7 +15,7 @@
                 var $table = $(o);
                 if ($table.prop("tagName") != "TABLE") $table = $table.find("table:first");
 
-                var form_name =this.formName;
+                var form_name = this.formName;
                 var form_addbottom = $table.attr('form-addbottom') == "";
                 var max_row = $table.attr("max-row") ? $table.attr("max-row") : -1;
 
@@ -48,7 +48,7 @@
                 });
 
                 var index = 0;
-                $(a).on("click",function(){
+                $(a).on("click", function () {
                     var $table = $(o);
                     //count row
                     if (max_row > 0) {
@@ -74,7 +74,7 @@
                             div.find("input,textarea,select").each(function (i, obj) {
                                 var name = $(obj).attr("name");
                                 var index_of = name.indexOf("[]");
-                                if (form_name !="") {
+                                if (form_name != "") {
                                     if (index_of >= 0) {
                                         $(obj).attr('name', form_name + '[c][' + index + '][' + name.substring(0, index_of) + '][]');
                                     } else {
@@ -176,9 +176,7 @@
         }
     });
 
-    Vue.component('alt-column', {
-        template: "<th><slot></slot></th>"
-    });
+
 
     Vue.component('alt-cell', {
         template: "<td><slot></slot></td>"
