--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -30,6 +30,7 @@
     <link id="pb-file" rel="import" href="{{system_base}}/plugins/pb.1.0.0/pb.html?v={{system.version}}&t={{t}}">
     <link id="alt-file" rel="import" href="{{system_base}}/plugins/alt.1.0.0/alt.html?v={{system.version}}&t={{t}}">
     <link id="rt-file" rel="import" href="{{system_base}}/plugins/rt.2.0.0/rt.html?v={{system.version}}&t={{t}}">
+    <link id="rt2-file" rel="import" href="{{system_base}}/plugins/rt.2.0.0/rt2.html?v={{system.version}}&t={{t}}">
     <link rel="stylesheet" href="{{system_base}}/plugins/rt.2.0.0/style.css">
     <link id="bs-file" rel="import" href="{{system_base}}/plugins/bs.1.0.0/bs.html?v={{system.version}}&t={{t}}">
 
